2011-09-08  Nick Alcock  <nick.alcock@oracle.com>

	* test/struct/rwinfo.d: Adjust: fix copyright date, assign
	trigger, report if elapsed time >0ns rather than emitting the
	(highly variable) actual time.
	* test/struct/rwinfo.r: Expected results.

	* test/triggers/readwholedir.c: New trigger, read all .d files in
	the trigger directory in consistent order using chunks as close to
	4Kb as possible, and write them to a temporary file in chunks of
	the same size.
	* test/triggers/Build (TRIGGERS): Build it.

	* test/triggers/testprobe.c: Add CDDL header.

2011-09-08  Nick Alcock  <nick.alcock@oracle.com>

	* cmd/dtrace.c: New -t switch, turning off CPU and ID output for
	reproducible test results.
	(usage): Document it.
	(chew): Use it.
	(main): Set it.  Mark options with + rather than contaminating
	child environments with POSIXLY_CORRECT.

	* runtest.sh: Use it.  Rip out the awk-based results
	postprocessor.  Always use the C collation locale.  Ensure that we
	kill dtrace and trigger processes on SIGINT. $_pid is now the
	trigger PID (manually expanded, left unexpanded at '$_pid' if
	there is no trigger).

	* test/*/*.r: Adjust for removal of postprocessor.

2011-09-06  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Automatically overwrite .r files if --capture-expected
	is on and specific tests are named on the command line.  Translate
	.r files named on the command line into their corresponding .d files.

2011-09-02  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh (first_dtest_dir): Segregate stderr output from
	dtrace into a separate section of the output delineated by
	-- @@stderr --.
	* test/**/*.r: Fix up expected results.

2011-09-01  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_dis.c (dt_dis_stmts): Do not loop over the actions
	list.

	* runtest.sh: Emit regression test logs to the right directory.

2011-08-29  Shujing Zhao  <pearly.zhao@oracle.com>

	* runtest.sh: Fix the error when process postprocessor.
