@@ -1,0 +1,27 @@
+                   FUNCTION:NAME
+                     read:return  nsecs
+                     read:return  nsecs
+                    write:return  nsecs
+                     read:return  nsecs
+                     read:return  nsecs
+                    write:return  nsecs
+                     read:return  nsecs
+                     read:return  nsecs
+                    write:return  nsecs
+                     read:return  nsecs
+                     read:return  nsecs
+                    write:return  nsecs
+                     read:return  nsecs
+                     read:return  nsecs
+                    write:return  nsecs
+                     read:return  nsecs
+                     read:return  nsecs
+                    write:return  nsecs
+                     read:return  nsecs
+                     read:return  nsecs
+                    write:return  nsecs
+                     read:return  nsecs
+
+
+-- @@stderr --
+dtrace: script 'test/intro/rwtime.d' matched  probes
