@@ -1,0 +1,8 @@
+                   FUNCTION:NAME
+                     write:entry 
+                     write:entry 
+                     write:entry 
+
+
+-- @@stderr --
+dtrace: script 'test/script/tracewrite.d' matched 1 probe
